feat: codec-helper 0.2.0 release (#6)
* feat: API for adding direct mappings

* feat: regex validator for string fields

* feat: initial code for generating AssetBuilderCodec

Also support abstract codecs and lay groundwork for supporting codec inheritance.

* feat: more overloads of modelBuilder and modelAssetBuilder

* fix: private member access & test

* feat: enum resolution support

* docs: CodecUtil method documentation, annotation documentation

Also bump version and add more examples to README.md

* chore: bump manifest.json version

* build: use `shadow` configuration for the Hytale dependency

* chore: update spotless, junit

Also clean up some compiler warnings and add --sun-misc-unsafe-memory-access=allow to unit test runner and CI workflow.

* fix: LengthRangeProvider now correctly works for all supported field types

* chore: tests for length range validator

* build: publish sources and javadoc jar as well

Also minimize shaded sources.

* chore: set Hytale dependency back to compileOnly

`shadow` is more "correct" but we actually don't want Hytale declared as a dependency in the published POM until they have proper semver.

* chore: update codec-helper dependency, update gradle wrapper